// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications Render applications with emptyState 1`] = `
Array [
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <h1
      class="pf-c-title pf-m-2xl"
      widget-type="InsightsPageHeaderTitle"
    >
       Applications Settings 
    </h1>
    <p>
      Settings for testapp
    </p>
  </section>,
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
        >
          <div
            class="pf-c-card__body"
          >
            <div
              class="ins-c-skeleton ins-c-skeleton__lg"
            >
               
            </div>
          </div>
        </article>
      </div>
    </div>
  </section>,
]
`;

exports[`Applications Render applications with mockState 1`] = `
Array [
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <h1
      class="pf-c-title pf-m-2xl"
      widget-type="InsightsPageHeaderTitle"
    >
       Applications Settings 
    </h1>
    <p>
      Settings for testapp
    </p>
  </section>,
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
        >
          <div
            class="pf-c-card__body"
          >
            <form
              class="pf-c-form"
              novalidate=""
            >
              <div
                class="pf-c-form__group"
              >
                <label
                  class="pf-c-form__label"
                  for="email"
                >
                  Email
                  <span
                    aria-hidden="true"
                    class="pf-c-form__label-required"
                  >
                    *
                  </span>
                </label>
                <input
                  aria-invalid="false"
                  class="pf-c-form-control"
                  id="email"
                  label="Email"
                  name="email"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="pf-c-form__group"
              >
                <label
                  class="pf-c-switch"
                  for="hideSatelliteSystems"
                >
                  <input
                    aria-label=""
                    class="pf-c-switch__input"
                    id="hideSatelliteSystems"
                    labeloff="Hide Satellite systems"
                    name="hideSatelliteSystems"
                    type="checkbox"
                    value="false"
                  />
                  <span
                    class="pf-c-switch__toggle"
                  />
                  <span
                    aria-hidden="true"
                    class="pf-c-switch__label pf-m-on"
                  >
                    Hide Satellite systems
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-c-switch__label pf-m-off"
                  >
                    Hide Satellite systems
                  </span>
                </label>
              </div>
              <div
                class="pf-c-form__group pf-m-action"
              >
                <div
                  class="pf-c-form__actions"
                >
                  <button
                    class="pf-c-button pf-m-primary"
                    type="button"
                  >
                    Submit
                  </button>
                  <button
                    class="pf-c-button pf-m-secondary"
                    type="button"
                  >
                    Reset
                  </button>
                </div>
              </div>
            </form>
          </div>
        </article>
      </div>
    </div>
  </section>,
]
`;

exports[`Applications Render applications with no data 1`] = `
Array [
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <h1
      class="pf-c-title pf-m-2xl"
      widget-type="InsightsPageHeaderTitle"
    >
       Applications Settings 
    </h1>
    <p>
      Settings for testapp
    </p>
  </section>,
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
        >
          <div
            class="pf-c-card__body"
          >
            <div
              class="ins-c-skeleton ins-c-skeleton__lg"
            >
               
            </div>
          </div>
        </article>
      </div>
    </div>
  </section>,
]
`;
